# otus-rust-hw

akbt/: Cargo.toml  README.md  build.rs
akbt/src/: backup.rs  consumer.rs  counters.rs  errors.rs  gzip.rs  gzwriter.rs  helpers.rs  main.rs  mbprocess.rs  restore.rs
akbt/src/protos/: kmessages.proto  mod.rs
hw1/src/: main.rs
hw10/: Cargo.toml
hw10/examples/: progress_dyn.rs  progress_gen.rs
hw10/src/: lib.rs  progress_dyn.rs  progress_gen.rs
hw11/: Cargo.toml
hw11/examples/: example1.rs
hw11/src/: integration_tests.rs  lib.rs  main.rs
hw11/src/smartdevices/: mod.rs
hw11/src/smartdevices/socket/: mod.rs  tests.rs
hw11/src/smartdevices/thermometer/: mod.rs  tests.rs
hw11/src/smarthouse/: mod.rs
hw11/src/smarthouse/room/: mod.rs  tests.rs
hw12/: Cargo.toml
hw12/src/: coffee.rs  coffeebuilder.rs  coffeemachine.rs  lib.rs
hw13/: .env  Cargo.toml
hw13/src/: db.rs  lib.rs  main.rs  router.rs  smartdevice.rs  smarthouse.rs  smartreport.rs  smartroom.rs  smartsocket.rs  smartthermometer.rs
hw14/: Cargo.toml  run.sh
hw14/src/: db.rs  main.rs  smartdevice.rs  smartroom.rs  smartsocket.rs  smartthermometer.rs
hw15/: Cargo.toml  build.rs  run.sh
hw15/c_src/: Makefile  main.c
hw15/src/: lib.rs
hw2/src/: main.rs  ssocket.rs  sthermometer.rs
hw3/src/: main.rs  sdevice.rs  ssocket.rs  sthermometer.rs
hw4/: Cargo.toml
hw4/examples/: example1.rs
hw4/src/: integration_tests.rs  lib.rs  main.rs
hw4/src/smartdevices/: mod.rs
hw4/src/smartdevices/socket/: mod.rs
hw4/src/smartdevices/thermometer/: mod.rs  tests.rs
hw4/src/smarthouse/: mod.rs
hw4/src/smarthouse/room/: mod.rs
hw5/: Cargo.toml
hw5/examples/: example1.rs
hw5/src/: integration_tests.rs  main.rs
hw5/src/smartdevices/socket/: mod.rs
hw5/src/smartdevices/thermometer/: mod.rs
hw5/src/smarthouse/: mod.rs
hw5/src/smarthouse/room/: mod.rs
hw6/: Cargo.toml
hw6/examples/: example1.rs
hw6/src/: main.rs
hw6/src/smartdevices/: mod.rs
hw6/src/smartdevices/socket/: mod.rs
hw6/src/smartdevices/thermometer/: mod.rs
hw6/src/smarthouse/: mod.rs
hw6/src/smarthouse/room/: mod.rs
hw6/tests/: integration_tests.rs
hw7/: Cargo.toml
hw7/examples/: example1.rs
hw7/src/: client.rs  lib.rs  main.rs  server.rs
hw7/src/smartdevices/: mod.rs
hw7/src/smartdevices/socket/: mod.rs  tests.rs
hw7/src/smartdevices/thermometer/: mod.rs
hw7/src/smarthouse/: mod.rs
hw7/src/smarthouse/room/: mod.rs  tests.rs
hw7/src/smartnet/: message.rs  mod.rs  netmessage.rs
hw7/tests/: integration_tests.rs
hw8/: Cargo.toml
hw8/udp_generator/: Cargo.toml
hw8/udp_generator/src/: main.rs
hw8/udp_msg_lib/: Cargo.toml  build.rs
hw8/udp_msg_lib/src/proto/: mod.rs  thermo_msg.proto
hw8/udp_thermometer/: Cargo.toml
hw8/udp_thermometer/src/: main.rs
hw9/: Cargo.toml
hw9/examples/: Cargo.toml
hw9/examples/src/: client_socket.rs  server_socket.rs  udpthermo_generator.rs  use_thermo.rs
hw9/msg_proto_lib/: Cargo.toml  build.rs
hw9/msg_proto_lib/src/: lib.rs  netmessage.rs
hw9/msg_proto_lib/src/proto/: cmd_message.proto  mod.rs  smart_message.proto
hw9/udp_socket_lib/: Cargo.toml
hw9/udp_socket_lib/src/: lib.rs
hw9/udp_thermometer_lib/: Cargo.toml
hw9/udp_thermometer_lib/src/: lib.rs
