[package]
name = "akbt"
version = "0.1.0"
edition = "2021"
authors = ["frenatz@gmail.com"]
description = "Another Kafka Backup Tool"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.11.2"
log = "0.4.20"
clap = { version = "4.5.0", features = ["derive", "env"] }
dotenv = "0.15.0"
flate2 = "1.0.28"
prost = "0.12.3"
prost-types = "0.12.3"
rdkafka = { version = "0.36.2", features = ["cmake-build"] }
serde = "1.0.196"
serde_json = "1.0.113"
thiserror = "1.0.57"
indicatif = "0.17.8"

[build-dependencies]
prost-build = "0.12.3"
