[package]
name = "restapi_smarthouse"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "restapi_smarthouse"
path = "./src/main.rs"

[[bin]]
name = "gen_socket"
path = "./gen/gen_socket.rs"

[[bin]]
name = "gen_thermometer"
path = "./gen/gen_thermometer.rs"

[[bin]]
name = "client_cli"
path = "./gen/client_cli.rs"

[[bin]]
name = "client_gui"
path = "./gen/client_gui.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.9.0"
actix-web = "4.4.1"
clap = { version = "4.4.18", features = ["derive"] }
dotenv = "0.15.0"
eframe = "0.26.0"
egui = "0.26.0"
egui_extras = "0.26.0"
env_logger = "0.11.0"
log = "0.4.20"
rand = "0.8.5"
reqwest = {version = "0.11.23", features =["json"]}
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
sqlx = { version = "0.7.3", features = ["runtime-tokio-native-tls", "sqlite"] }
thiserror = "1.0.56"
tokio = { version = "1.35.1", features = ["full"]}
