[package]
name = "hw15"
version = "0.1.0"
edition = "2021"

[lib]
name = "smartsocket"
crate-type = ["cdylib"]

[dependencies]
cbindgen = "0.26.0"
rand = "0.8.5"

[build-dependencies]
cbindgen = "0.26.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
